force-app/main/default/objects/Disbursement_Request__c/Disbursement_Request__c.object-meta.xml
<CustomObject>
    <label>Disbursement Request</label>
    <nameField>
        <displayFormat>D-{000000}</displayFormat>
        <label>Disbursements Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Disbursement Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>