force-app/main/default/objects/Disbursement_Request__c/fields/Approved_By_Conversion__c.field-meta.xml
<CustomField>
    <fullName>Approved_By_Conversion__c</fullName>
    <label>Approved By (Conversion)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>