force-app/main/default/objects/Disbursement_Request__c/fields/Assigned_Director_Conversion__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Director_Conversion__c</fullName>
    <label>Assigned Director (Conversion)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>