force-app/main/default/objects/Disbursement_Request__c/fields/Beneficiary__c.field-meta.xml
<CustomField>
    <fullName>Beneficiary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Beneficiary</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Disbursement Requests</relationshipLabel>
    <relationshipName>Disbursement_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>