force-app/main/default/objects/Disbursement_Request__c/fields/Budget_Category__c.field-meta.xml
<CustomField>
    <fullName>Budget_Category__c</fullName>
    <label>Budget Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Clothing</fullName>
            </value>
            <value>
                <fullName>Education/Training</fullName>
            </value>
            <value>
                <fullName>Funeral-Related</fullName>
            </value>
            <value>
                <fullName>Household</fullName>
            </value>
            <value>
                <fullName>Medical/Dental</fullName>
            </value>
            <value>
                <fullName>Personal Needs</fullName>
            </value>
            <value>
                <fullName>Professional (Legal, Financial, etc.)</fullName>
            </value>
            <value>
                <fullName>Recreation/Cultural</fullName>
            </value>
            <value>
                <fullName>Social Services</fullName>
            </value>
            <value>
                <fullName>Telecommunications</fullName>
            </value>
            <value>
                <fullName>Transportation</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>