force-app/main/default/objects/Disbursement_Request__c/fields/Check_Reference__c.field-meta.xml
<CustomField>
    <fullName>Check_Reference__c</fullName>
    <label>Check Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>