force-app/main/default/objects/Disbursement_Request__c/fields/Completed_By_Conversion__c.field-meta.xml
<CustomField>
    <fullName>Completed_By_Conversion__c</fullName>
    <label>Completed By Conversion</label>
    <length>50</length>
    <type>Text</type>
</CustomField>