force-app/main/default/objects/Disbursement_Request__c/fields/Created_By_Program__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Program__c</fullName>
    <label>Created By Program</label>
    <length>50</length>
    <type>Text</type>
</CustomField>