force-app/main/default/objects/Disbursement_Request__c/fields/Date_Disbursed__c.field-meta.xml
<CustomField>
    <fullName>Date_Disbursed__c</fullName>
    <label>Date Disbursed</label>
    <type>Date</type>
</CustomField>