force-app/main/default/objects/Disbursement_Request__c/fields/Date_Requested__c.field-meta.xml
<CustomField>
    <fullName>Date_Requested__c</fullName>
    <label>Date Requested</label>
    <type>Date</type>
</CustomField>