force-app/main/default/objects/Disbursement_Request__c/fields/Denial_Reason_for_Templates__c.field-meta.xml
<CustomField>
    <fullName>Denial_Reason_for_Templates__c</fullName>
    <formula>IF(TEXT(Denial_Reason__c) = &quot;Other&quot;, Other_Denial_Reason__c, TEXT(Denial_Reason__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Denial Reason for Templates</label>
    <type>Text</type>
</CustomField>