force-app/main/default/objects/Disbursement_Request__c/fields/Due_Date_c__c.field-meta.xml
<CustomField>
    <fullName>Due_Date_c__c</fullName>
    <label>Due Date__c</label>
    <type>Date</type>
</CustomField>