force-app/main/default/objects/Disbursement_Request__c/fields/Funding_Will_Be_Disbursed__c.field-meta.xml
<CustomField>
    <fullName>Funding_Will_Be_Disbursed__c</fullName>
    <label>Funding Will Be Disbursed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Receipts are submitted</fullName>
            </value>
            <value>
                <fullName>The Disbursement Request Form is signed</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>