force-app/main/default/objects/Disbursement_Request__c/fields/Funding_Will_Be_Disbursed_Templates__c.field-meta.xml
<CustomField>
    <fullName>Funding_Will_Be_Disbursed_Templates__c</fullName>
    <formula>IF(TEXT(Funding_Will_Be_Disbursed__c) = &quot;Other&quot;,  Other_Criteria_for_Disbursement__c , TEXT(Funding_Will_Be_Disbursed__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Funding Will Be Disbursed Templates</label>
    <type>Text</type>
</CustomField>