force-app/main/default/objects/Disbursement_Request__c/fields/Import_Test__c.field-meta.xml
<CustomField>
    <fullName>Import_Test__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Import Test</label>
    <type>Checkbox</type>
</CustomField>