force-app/main/default/objects/Disbursement_Request__c/fields/Other_Criteria_for_Disbursement__c.field-meta.xml
<CustomField>
    <fullName>Other_Criteria_for_Disbursement__c</fullName>
    <label>Other Criteria for Disbursement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>