force-app/main/default/objects/Disbursement_Request__c/fields/Other_Denial_Reason__c.field-meta.xml
<CustomField>
    <fullName>Other_Denial_Reason__c</fullName>
    <label>Other Denial Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>