force-app/main/default/objects/Disbursement_Request__c/fields/Outstanding_Receipts__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Receipts__c</fullName>
    <formula>Amount__c -  Receipt_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Outstanding Receipts</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>