force-app/main/default/objects/Disbursement_Request__c/fields/Pay_To__c.field-meta.xml
<CustomField>
    <fullName>Pay_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Create an Organization if needed to reference</inlineHelpText>
    <label>Pay To</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Disbursements</relationshipName>
    <type>Lookup</type>
</CustomField>