force-app/main/default/objects/Disbursement_Request__c/fields/Pay_To_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Pay_To_Account_Name__c</fullName>
    <formula>Pay_To__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pay To Account Name</label>
    <type>Text</type>
</CustomField>