force-app/main/default/objects/Disbursement_Request__c/fields/Payee__c.field-meta.xml
<CustomField>
    <fullName>Payee__c</fullName>
    <label>Payee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>