force-app/main/default/objects/Disbursement_Request__c/fields/Primary_Rep_Name__c.field-meta.xml
<CustomField>
    <fullName>Primary_Rep_Name__c</fullName>
    <formula>Trust__r.Primary_Rep_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Rep Name</label>
    <type>Text</type>
</CustomField>