force-app/main/default/objects/Disbursement_Request__c/fields/Receipt_Total__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Total__c</fullName>
    <label>Receipt Total</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>