force-app/main/default/objects/Disbursement_Request__c/fields/Spending_Plan__c.field-meta.xml
<CustomField>
    <fullName>Spending_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Spending Plan</label>
    <referenceTo>Spending_Plan__c</referenceTo>
    <relationshipName>Disbursements</relationshipName>
    <type>Lookup</type>
</CustomField>