force-app/main/default/objects/Disbursement_Request__c/fields/Trust_Internal_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Trust_Internal_Account_Number__c</fullName>
    <formula>Trust__r.Internal_Account_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Trust Internal Account Number</label>
    <type>Text</type>
</CustomField>